[project]
name = "dyablog"
version = "0.1.0"
description = ""
authors = [{ name = "0xBA5E64", email = "26796481+0xBA5E64@users.noreply.github.com" }]
requires-python = "~=3.10.7"
readme = "README.md"
dependencies = [
    "Django>=5.2.6",
    "django-editorjs-fields>=0.2.7,<0.3"
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "mypy>=1.17.1",
    "django-stubs>=5.2.2",
    "django-browser-reload>=1.19.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    "migrations",
    "manage.py"
]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "dyablog.settings"
