[project]
name = "dyablog"
version = "0.1.0"
description = ""
authors = [{ name = "0xBA5E64", email = "26796481+0xBA5E64@users.noreply.github.com" }]
requires-python = "~=3.14.0"
readme = "README.md"
dependencies = [
    "Django~=6.0.0",
    "django-editorjs-fields~=0.2.7",
    "django-tailwind-cli>=4.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "django-stubs>=5.2.2",
    "django-browser-reload>=1.19.0",
    "ruff>=0.12.7",
    "ty>=0.0.35",
    "django-types>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    "migrations",
    "manage.py"
]

[tool.ty.src]
exclude = [
    "migrations/**"
]

[tool.django-stubs]
django_settings_module = "dyablog.settings"
